--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-youtube": "^10.1.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
