--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "redis": "^5.8.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
